Fix education img on mobile

--- a/src/static/css/Education.css
+++ b/src/static/css/Education.css
@@ -37,6 +37,7 @@
 }
 
 .education-img {
+  object-fit: fill;
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
